added rest support for events
