# docs/swagger.yaml
@@ -4,7 +4,22 @@ definitions:
     properties:
       content:
         type: string
-      postID:
+      postId:
+        type: string
+    type: object
+  types.EventPayload:
+    properties:
+      date:
+        type: string
+      description:
+        type: string
+      location:
+        type: string
+      orgId:
+        type: string
+      public:
+        type: boolean
+      title:
         type: string
     type: object
   types.LoginPayload:
@@ -101,6 +116,59 @@ paths:
       summary: Registration endpoint
       tags:
       - auth
+  /event/event/get/:id:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      summary: Get event endpoint
+      tags:
+      - events
+  /events:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: "1"
+        in: query
+        name: page
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      summary: Get Post endpoint
+      tags:
+      - events
+  /events/create:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: body
+        in: body
+        name: body
+        schema:
+          $ref: '#/definitions/types.EventPayload'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      summary: create event endpoint
+      tags:
+      - events
   /events/event/:id/upload:
     post:
       consumes:
@@ -122,6 +190,25 @@ paths:
         "200":
           description: OK
       summary: Add Event Image endpoint
+      tags:
+      - events
+  /events/event/search:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: jhon doe org
+        in: query
+        name: name
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: Search event endpoint
       tags:
       - events
   /oauth/facebook/callback:
