# internal/handlers/events.go
@@ -1,11 +1,13 @@
 package handlers
 
 import (
+	"errors"
 	"fmt"
 	"io"
 	"net/http"
 	"os"
 	"path/filepath"
+	"strconv"
 
 	"github.com/golang-jwt/jwt/v5"
 	"github.com/labstack/echo/v4"
@@ -45,6 +47,103 @@ func (h *eventHandler)hasPerm(c echo.Context) (*db.EventModel, error) {
 }
 
 
+// @Summary	Get event endpoint
+// @Tags		events
+// @Accept		json
+// @Produce	json
+// @Success	200
+// @Router		/event/event/get/:id [get]
+func (h *eventHandler) Get(c echo.Context) error {
+	id := c.Param("id")
+	org, err := h.srv.GetEvent(id)
+
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, err)
+	}
+
+	return c.JSON(http.StatusOK,org)
+}
+
+// @Summary	Get Post endpoint
+// @Tags		events
+// @Accept		json
+// @Produce	json
+// @Param page query string true "1"
+// @Success	200
+// @Router		/events [get]
+func (h *eventHandler) GetPage(c echo.Context) error {
+  var p int
+  page := c.QueryParam("page")
+  if page == "" {
+    p = 1
+  }
+  p,err := strconv.Atoi(page)
+  if err != nil {
+     	return echo.NewHTTPError(http.StatusBadRequest, err)
+  }
+	org, err := h.srv.GetEvents(p)
+
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, err)
+	}
+
+	return c.JSON(http.StatusOK,org)
+}
+
+// @Summary	Search event endpoint
+// @Tags		events
+// @Accept		json
+// @Produce	json
+// @Param		name	query		string	false	"jhon doe org"
+// @Success	200			{object}	string
+// @Router		/events/event/search [get]
+func (h *eventHandler) Search(c echo.Context) error {
+	name := c.QueryParam("query")
+	var err error
+	var user interface{}
+
+	user, err = h.srv.SearchEvent(name)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, err)
+	}
+	return c.JSON(http.StatusOK, user)
+}
+
+
+
+// @Summary	create event endpoint
+// @Tags		events
+// @Accept		json
+// @Produce	json
+// @Param		Authorization	header	string	true	"Bearer token"
+// @Param		body	body	types.EventPayload	false "body"	
+// @Success	200
+// @Router		/events/create [post]
+func (h *eventHandler) Create(c echo.Context) error {
+	user := c.Get("user").(*jwt.Token)
+	claims := user.Claims.(*types.Claims)
+	var payload types.EventPayload
+	err := c.Bind(&payload)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
+
+	}
+  org,err := h.osrv.GetOrg(payload.OrgID)
+  if err != nil {
+    	return echo.NewHTTPError(http.StatusBadRequest, err.Error())
+
+  }
+  if org.OwnerID != claims.ID {
+    	return echo.NewHTTPError(http.StatusBadRequest, errors.New("no perms to perform this action"))
+  }
+  result, err := h.srv.CreateEvent(payload)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
+
+	}
+	return c.JSON(http.StatusOK, result)
+}
+
 // @Summary	Add Event Image endpoint
 // @Tags		events
 // @Accept		form/multipart
@@ -76,7 +175,7 @@ func (h *eventHandler) AddImage(c echo.Context) error {
 	io.Copy(f, src)
 	_, err = h.srv.AddImage(org.ID, path)
 	return c.JSON(http.StatusOK, types.Response{
-		"org_img": path,
+		"img": path,
 	})
 }
 
